--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML> 
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="google-site-verification" content="QM1CbSIBzmifHn_CRQTGJ2lhrLQZlCo93vOAgHU6vrw" />
+  <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
 
   <title>Jiangran Lyu</title>
 
