--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta name="google-site-verification" content="QM1CbSIBzmifHn_CRQTGJ2lhrLQZlCo93vOAgHU6vrw" />
-  <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>Jiangran Lyu</title>
 
