--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>
             </p>
             <p style="text-align:center">
-              <a href="mailto:dorisyan@pku.edu.cn">Email</a> &nbsp/&nbsp
+              <a href="mailto:jiangran.lyu@stu.pku.edu.cn">Email</a> &nbsp/&nbsp
               <a href="https://github.com/jiangranlv">Github</a>
             </p>
           </td>
