--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
               href="https://www.pku.edu.cn/">Peking University</a>, where I am honored to be advised by <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Prof. Yizhou Wang</a>
         and co-advised by <a href="https://hughw19.github.io/">Prof. He Wang</a>.
             </p>
+            <p>
+              My research interests span Robotics, 3D Vision and Machine Learning. 
+              My research objective is to endow embodied agents working in complex real-world scenes with generalizable manipulation, navigation and control capabilities.
+            </p>
             </p>
             <p style="text-align:center">
               <a href="mailto:jiangran.lyu@stu.pku.edu.cn">Email</a> &nbsp/&nbsp
@@ -40,7 +44,7 @@
           </td>
         </tr>
       </tbody></table>
-      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research</heading>
@@ -49,7 +53,7 @@
             </p>
           </td>
         </tr>
-      </tbody></table>
+      </tbody></table> -->
 
 
 
@@ -73,7 +77,38 @@
         <tbody>
 
 
-
+        <tr>
+          <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <video controls autoplay loop muted playsinline style="width: 100%; max-width: 100%" controls>
+              <source src="video/scissorbot.mp4" type="video/mp4">
+          </td>
+          <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
+            <papertitle>ScissorBot: Learning Generalizable Scissor Skill for Paper Cutting
+              via Simulation, Imitation, and Sim2Real</papertitle>
+            <br>
+            <b>Jiangran Lyu</b>,
+            <a href="">Yuxing Chen</a>,
+            <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Tao Du</a>,
+            <a href="">Feng Zhu</a>,
+            <a href="">Huiquan Liu</a>,
+            <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a>,
+            <a href="https://hughw19.github.io/">He Wang</a>
+            <br>
+            <em>Data Generation for Robotics@RSS 2024
+            <br>
+            <!-- <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / -->
+            <!-- <a href="https://arxiv.org/abs/2305.10465">arXiv</a> /  -->
+            <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> 
+            <!-- <a href="https://github.com/yd-yin/RotationLaplace"> code </a> -->
+<!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
+<!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
+            <p style="margin-bottom: 10px; margin-top: 10px">
+              We propose the first learning-based robotic paper cutting system. 
+              Experimental results demonstrate that our method achives performance comparable to human operation
+              with a single hand under the same conditions.
+            </p>
+          </td>
+        </tr>
 
         <tr>
           <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
@@ -82,9 +117,9 @@
           <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
             <papertitle>Towards Robust Probabilistic Modeling on SO(3) via Rotation Laplace Distribution</papertitle>
             <br>
-            Yingda Yin*,
+            <a href="https://yd-yin.github.io/">Yingda Yin*</a>,
             <b>Jiangran Lyu*</b>,
-            Yang Wang,
+            <a href="https://yangwangpku.github.io/">Yang Wang</a>,
             Haoran Liu,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>,
             <a href="https://cfcs.pku.edu.cn/baoquan/">Baoquan Chen</a><sup>&dagger;</sup>,
@@ -144,16 +179,31 @@
           <td style="padding: 20px; padding-top: 15px; padding-bottom: 15px" width="75%" vertical-align=middle>
             <papertitle>Dalian University of Technology</papertitle>
             <br>
-            B.E. in Network Engineering<br>
+            B.E. from School of Software<br>
             2019.9 - 2023.7
 
-            <p style="margin-bottom: 0">Grades: 95.40 &nbsp; (Rank 1/119)<br>
+            <p style="margin-bottom: 0">Grades: 94.10 &nbsp; (Rank 1/119)<br>
             2021 China National Scholarships</p>
           </td>
         </tr>
         </tbody>
       </table>
 
+
+      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <tbody>
+        <tr>
+          <td style="padding-bottom: 20px; padding-top: 30px">
+            <heading>Awards & Honors</heading>
+            <ul>
+              <li>2021 China National Scholarships</li>
+              <li>2020 & 2022 DLUT Toly Scholarships</li>
+              <li>2023 PKU Hongcai Scholarships</li>
+            </ul>
+          </td>
+        </tr>
+        </tbody>
+      </table>
 
       <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto; ">
         <tbody>
