--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
           </td>
           <td style="padding:2.5%;width:40%;max-width:40%">
-            <a href="images/portrait.jpg"><img style="width:120%;max-width:120%" alt="profile photo" src="images/portrait.jpg" class="hoverZoomLink"></a>
+            <a href="images/portrait2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/portrait2.jpg" class="hoverZoomLink"></a>
           </td>
         </tr>
       </tbody></table>
@@ -182,8 +182,7 @@
             B.E. from School of Software<br>
             2019.9 - 2023.7
 
-            <p style="margin-bottom: 0">Grades: 94.10 &nbsp; (Rank 1/119)<br>
-            2021 China National Scholarships</p>
+            <p style="margin-bottom: 0">Grades: 94.10 &nbsp; (Rank 1/119)</p>
           </td>
         </tr>
         </tbody>
