--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         </tr>
 
         <tr>
-          <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
-            <img style="width: 100%; max-width: 100%" src='images/laplace.jpg'>
+          <td style="padding: 8px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src='images/laplace2.jpg'>
           </td>
           <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
             <papertitle>Towards Robust Probabilistic Modeling on SO(3) via Rotation Laplace Distribution</papertitle>
