--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </td>
         </tr>
         <tr>
-          <td style="padding-bottom: 10px; padding-top: 5px; font-size: 14px">
+          <td style="padding-bottom: 10px; padding-top: 5px; font-size: 16px">
             *: equal contribution; &dagger; corresponding author(s)
           </td>
         </tr>
@@ -92,7 +92,7 @@
             <a href="">Feng Zhu</a>,
             <a href="">Huiquan Liu</a>,
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a>,
-            <a href="https://hughw19.github.io/">He Wang</a>
+            <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
             <em>Data Generation for Robotics@RSS 2024
             <br>
