--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <b>Jiangran Lyu</b>,
             <a href="">Yuxing Chen</a>,
             <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Tao Du</a>,
-            <a href="">Feng Zhu</a>,
-            <a href="">Huiquan Liu</a>,
+            Feng Zhu,
+            Huiquan Liu,
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
@@ -134,6 +134,30 @@
               We propose a novel Rotation Laplace distribution for probabilistic rotation estimation.
               Rotation Laplace distribution is robust to the disturbance of outliers and enforces much gradient to the low-error region,
               resulting in new state-of-the-art performance over both probabilistic and non-probabilistic baselines.
+            </p>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding: 8px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src='images/VCDN.png'>
+          </td>
+          <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
+            <papertitle>Discovering Visual Co-occurrence for Fine-grained Image Retrieval</papertitle>
+            <br>
+            Shijie Wang,
+            <a href ="https://scholar.google.com/citations?user=pMnlgVMAAAAJ&hl=zh-CN"> Haojie Li</a><sup>&dagger;</sup>,
+            <b>Jiangran Lyu</b>,
+            <a href="https://www.qitian1987.com/">Qi Tian</a>,
+            <br>
+            <em>Submitted to TPAMI &nbsp;
+            <br>
+            <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / <a href="https://pku-epic.github.io/RotationLaplace/"> project page </a> /
+            <a href="https://github.com/yd-yin/RotationLaplace"> code </a>
+<!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
+<!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
+            <p style="margin-bottom: 10px; margin-top: 10px">
+              we propose a novel Visual Co-occurrence Discovery Network (VCDN) to discover semantic co-occurring relationships within objects and facilitate the inference of their compositional structures. 
             </p>
           </td>
         </tr>
