--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <td style="padding-bottom: 10px; padding-top: 5px; font-size: 16px">
-            *: equal contribution; &dagger; corresponding author(s)
+            *: joint first author; &dagger; corresponding author(s)
           </td>
         </tr>
         </tbody>
