--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
             <br>
             <em>Submitted to TPAMI &nbsp;
             <br>
-            <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / <a href="https://pku-epic.github.io/RotationLaplace/"> project page </a> /
-            <a href="https://github.com/yd-yin/RotationLaplace"> code </a>
+            <a href="">arXiv</a> / <a href=""> project page </a> /
+            <a href=""> code </a>
 <!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
 <!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
             <p style="margin-bottom: 10px; margin-top: 10px">
