--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
-            <em>Data Generation for Robotics@RSS 2024
+            <em>CoRL 2024</em>
             <br>
-            <!-- <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / -->
+            <em>Data Generation for Robotics@RSS 2024</em>
+            <br>
+            <a href="">arXiv</a> /
             <!-- <a href="https://arxiv.org/abs/2305.10465">arXiv</a> /  -->
-            <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> 
-            <!-- <a href="https://github.com/yd-yin/RotationLaplace"> code </a> -->
+            <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> /
+            <a href=""> code </a>
 <!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
 <!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
             <p style="margin-bottom: 10px; margin-top: 10px">
@@ -157,7 +159,7 @@
 <!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
 <!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
             <p style="margin-bottom: 10px; margin-top: 10px">
-              we propose a novel Visual Co-occurrence Discovery Network (VCDN) to discover semantic co-occurring relationships within objects and facilitate the inference of their compositional structures. 
+              We propose a novel Visual Co-occurrence Discovery Network (VCDN) to discover semantic co-occurring relationships within objects and facilitate the inference of their compositional structures. 
             </p>
           </td>
         </tr>
