update scissorbot video

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <tr>
           <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
             <video controls autoplay loop muted playsinline style="width: 100%; max-width: 100%" controls>
-              <source src="video/scissorbot.mp4" type="video/mp4">
+              <source src="video/scissorbot_1.mp4" type="video/mp4">
           </td>
           <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
             <papertitle>ScissorBot: Learning Generalizable Scissor Skill for Paper Cutting
