--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <br>
             <em>Data Generation for Robotics@RSS 2024</em>
             <br>
-            <a href="">arXiv</a> /
+            <a href="https://arxiv.org/pdf/2409.13966">arXiv</a> /
             <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> /
             <a href=""> code </a>
 <!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
