--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Tao Du</a>,
             Feng Zhu,
             Huiquan Liu,
-            <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a>,
+            <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a><sup>&dagger;</sup>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
             <em>CoRL 2024</em>
