--- a/index.html
+++ b/index.html
@@ -76,12 +76,33 @@
       <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto; ">
         <tbody>
 
+        <tr>
+          <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src="images/2024_arxiv_robohanger.gif" alt="">
+          </td>
+          <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
+            <papertitle>RoboHanger: Learning Generalizable Robotic Hanger Insertion for Diverse Garments</papertitle>
+            <br>
+            Yuxing Chen, Songlin Wei, Bowen Xiao, <b>Jiangran Lyu</b>, Jiayi Chen, Feng Zhu,
+            <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
+            <br>
+            <em>arXiv 2024</em> &nbsp;
+            <br>
+            <a href="https://chen01yx.github.io/Robohanger_Index">project page</a>
+            <p style="margin-bottom: 10px; margin-top: 10px">
+              This work explores robotic hanger insertion with a focus on diverse garments, leveraging a novel learning-based approach.
+            </p>
+          </td>
+        </tr>
 
         <tr>
           <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src="images/2024_corl_scissor.gif" alt="">
+          </td>
+          <!-- <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
             <video controls autoplay loop muted playsinline style="width: 100%; max-width: 100%" controls>
               <source src="video/scissorbot_1.mp4" type="video/mp4">
-          </td>
+          </td> -->
           <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
             <papertitle>ScissorBot: Learning Generalizable Scissor Skill for Paper Cutting
               via Simulation, Imitation, and Sim2Real</papertitle>
