update url for jiayi songlin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
           <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
             <papertitle>RoboHanger: Learning Generalizable Robotic Hanger Insertion for Diverse Garments</papertitle>
             <br>
-            Yuxing Chen, Songlin Wei, Bowen Xiao, <b>Jiangran Lyu</b>, Jiayi Chen, Feng Zhu,
+            Yuxing Chen, 
+            <a href="https://songlin.github.io/">Songlin Wei</a>, 
+            Bowen Xiao, <b>Jiangran Lyu</b>, 
+            <a href="https://jychen18.github.io/">Jiayi Chen</a>, 
+            Feng Zhu,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
             <em>arXiv 2024</em> &nbsp;
