--- a/index.html
+++ b/index.html
@@ -55,7 +55,22 @@
         </tr>
       </tbody></table> -->
 
-
+      <div class="section">
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tbody>
+            <tr>
+              <td style="padding-bottom: 5px; padding-top: 20px">
+                <heading>News</heading>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <ul>
+          <li> <b style="color: green; background-color: #ffff42">NEW</b> [2024/12] Invited talk at <a href="https://www.techbeat.net/talk-info?id=931">TechBeat </a>.
+          </li>
+        </ul>
+      </div>
+      
 
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody>
