--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
               <a href="https://github.com/jiangranlv">Github</a>
             </p>
           </td>
-          <td style="padding:2.5%;width:30%;max-width:30%">
+          <!-- <td style="padding:2.5%;width:30%;max-width:30%">
             <a href="images/portrait3.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/portrait3.jpg" class="hoverZoomLink"></a>
+          </td> -->
+          <td style="padding:2.5%;width:30%;max-width:25%">
+            <a href="images/portrait4.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/portrait4.jpg" class="hoverZoomLink"></a>
           </td>
         </tr>
       </tbody></table>
