ScissorBot Release code

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <br>
             <a href="https://arxiv.org/pdf/2409.13966">arXiv</a> /
             <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> /
-            <a href=""> code </a>
+            <a href="https://github.com/jiangranlv/ScissorBot"> code </a>
 <!--            <a href="https://arxiv.org/abs/2203.15765">arXiv</a> / <a href="https://yd-yin.github.io/FisherMatch/"> project page </a> /-->
 <!--             / <a href="https://youtu.be/GwQhnG6krCI"> video </a>-->
             <p style="margin-bottom: 10px; margin-top: 10px">
