--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a><sup>&dagger;</sup>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
-            <em>CoRL 2024</em>
+            <em>Conference on Robot Learning (<b>CoRL</b>) 2024</em>
             <br>
             <em>Data Generation for Robotics@RSS 2024</em>
             <br>
@@ -168,7 +168,7 @@
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>,
             <a href="https://cfcs.pku.edu.cn/baoquan/">Baoquan Chen</a><sup>&dagger;</sup>,
             <br>
-            <em>Submitted to TPAMI &nbsp; <b>(Major Revision)</b>
+            <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>) 2025</em>
             <br>
             <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / <a href="https://pku-epic.github.io/RotationLaplace/"> project page </a> /
             <a href="https://github.com/yd-yin/RotationLaplace"> code </a>
