--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a><sup>&dagger;</sup>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
-            <em>Conference on Robot Learning (<b>CoRL</b>) 2024</em>
+            <em>Conference on Robot Learning <span style="font-style: normal;"><b>(CoRL)</b></span> 2024</em>
             <br>
-            <em>Data Generation for Robotics@RSS 2024</em>
+            <em>Data Generation for Robotics@<span style="font-style: normal;"><b>RSS</b></span> 2024</em>
             <br>
             <a href="https://arxiv.org/pdf/2409.13966">arXiv</a> /
             <a href="https://pku-epic.github.io/ScissorBot/"> project page </a> /
@@ -168,7 +168,7 @@
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>,
             <a href="https://cfcs.pku.edu.cn/baoquan/">Baoquan Chen</a><sup>&dagger;</sup>,
             <br>
-            <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>) 2025</em>
+            <em>IEEE Transactions on Pattern Analysis and Machine Intelligence <span style="font-style: normal;"><b>(TPAMI)</b></span> 2025</em>
             <br>
             <a href="https://arxiv.org/abs/2305.10465">arXiv</a> / <a href="https://pku-epic.github.io/RotationLaplace/"> project page </a> /
             <a href="https://github.com/yd-yin/RotationLaplace"> code </a>
@@ -194,7 +194,7 @@
             <b>Jiangran Lyu</b>,
             <a href="https://www.qitian1987.com/">Qi Tian</a>,
             <br>
-            <em>Submitted to TPAMI &nbsp;
+            <em>Submitted to TPAMI </em>
             <br>
             <a href="">arXiv</a> / <a href=""> project page </a> /
             <a href=""> code </a>
