--- a/index.html
+++ b/index.html
@@ -93,6 +93,30 @@
 
       <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto; ">
         <tbody>
+        
+        <tr>
+          <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src="images/dywa.gif" alt="">
+          </td>
+          <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
+            <papertitle>DyWA: Dynamics-adaptive World Action Model for Generalizable Non-prehensile Manipulation</papertitle>
+            <br>
+            <b>Jiangran Lyu</b>,
+            <a href="https://openreview.net/profile?id=~Ziming_Li2">Ziming Li</a>,
+            <a href="https://scholar.google.com/citations?user=wRBbtl8AAAAJ&hl=en">Xuesong Shi</a>,
+            <a href="https://co1one.github.io/">Chaoyi Xu</a>,
+            <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a><sup>&dagger;</sup>,
+            <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
+            <br>
+            <em>arXiv</em> 2025 &nbsp;
+            <br>
+            <a href="">arXiv</a> /
+            <a href="https://pku-epic.github.io/DyWA">project page</a>
+            <p style="margin-bottom: 10px; margin-top: 10px">
+              This work propose Dynamics-Adaptive World Action Model (DyWA) , a novel framework that enhances action learning by jointly predicting future states while adapting to dynamics variations based on historical trajectories.
+            </p>
+          </td>
+        </tr>
 
         <tr>
           <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
@@ -110,6 +134,7 @@
             <br>
             <em>arXiv</em> 2024 &nbsp;
             <br>
+            <a href="https://arxiv.org/abs/2412.01083">arXiv</a> /
             <a href="https://chen01yx.github.io/Robohanger_Index">project page</a>
             <p style="margin-bottom: 10px; margin-top: 10px">
               This work explores robotic hanger insertion with a focus on diverse garments, leveraging a novel learning-based approach.
