update dywa arxiv

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <br>
             <em>arXiv</em> 2025 &nbsp;
             <br>
-            <a href="">arXiv</a> /
+            <a href="https://arxiv.org/pdf/2503.16806">arXiv</a> /
             <a href="https://pku-epic.github.io/DyWA">project page</a>
             <p style="margin-bottom: 10px; margin-top: 10px">
               This work propose Dynamics-Adaptive World Action Model (DyWA) , a novel framework that enhances action learning by jointly predicting future states while adapting to dynamics variations based on historical trajectories.
