--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             <papertitle>RoboVerse: Towards a Unified Platform, Dataset and Benchmark for Scalable and Generalizable Robot Learning</papertitle>
             <br><span style="font-size: smaller;">Haoran Geng, Feishi Wang, Songlin Wei, Yuyang Li, Bangjun Wang, Boshi An, Charlie Cheng, Haozhe Lou, Peihao Li, Yen-Jen Wang, Yutong Liang, Dylan Goetting, Chaoyi Xu, Haozhe Chen, Yuxi Qian, Yiran Geng, Jiageng Mao, Weikang Wan, Mingtong Zhang, <b>Jiangran Lyu</b>, Siheng Zhao, Jiazhao Zhang, Jialiang Zhang, Chengyang Zhao, Haoran Lu, Yufei Ding, Ran Gong, Yuran Wang, Yuxuan Kuang, Ruihai Wu, Baoxiong Jia, Carlo Sferrazza, Hao Dong, Siyuan Huang, Koushil Sreenath, Yue Wang, Jitendra Malik, Pieter Abbeel</span>
             <br>
-              <i>arXiv 2025</i><br>
+            <em>Robotics: Science and Systems <span style="font-style: normal;"><b>(RSS)</b></span></em>, 2025 &nbsp;
+            <br>
             <a href="https://roboverseorg.github.io">arXiv</a> /
             <a href="https://roboverseorg.github.io">project page</a> /
             <a href="https://roboverse.wiki">document</a> /
