--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Yizhou Wang</a><sup>&dagger;</sup>,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
-            <em>arXiv</em> 2025 &nbsp;
+            <em>International Conference on Computer Vision <span style="font-style: normal;"><b>(ICCV)</b></span></em> 2025 &nbsp;
             <br>
             <a href="https://arxiv.org/pdf/2503.16806">arXiv</a> /
             <a href="https://pku-epic.github.io/DyWA">project page</a>
@@ -150,7 +150,7 @@
             Feng Zhu,
             <a href="https://hughw19.github.io/">He Wang</a><sup>&dagger;</sup>
             <br>
-            <em>arXiv</em> 2024 &nbsp;
+            <em>IEEE Robotics and Automation Letters <span style="font-style: normal;"><b>(RAL)</b></em> 2025 &nbsp;
             <br>
             <a href="https://arxiv.org/abs/2412.01083">arXiv</a> /
             <a href="https://chen01yx.github.io/Robohanger_Index">project page</a>
