--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           </tbody>
         </table>
         <ul>
-          <li> <b style="color: green; background-color: #ffff42">NEW</b> [2024/12] Invited talk at <a href="https://www.techbeat.net/talk-info?id=931">TechBeat </a>.
-          </li>
+          <li><b style="color: green; background-color: #ffff42">NEW</b> [2025/7] Invited Talk at <a href="https://www.sharpa.com/">Sharpa</a> and Prof. <a href="https://alvinwen428.github.io/">Chuan Wen's Lab</a> at SJTU.</li>
+          <li>[2024/12] Invited Talk at <a href="https://www.techbeat.net/talk-info?id=931">TechBeat</a>.</li>
         </ul>
       </div>
       
