update DyWA code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <em>International Conference on Computer Vision <span style="font-style: normal;"><b>(ICCV)</b></span></em> 2025 &nbsp;
             <br>
             <a href="https://arxiv.org/pdf/2503.16806">arXiv</a> /
-            <a href="https://pku-epic.github.io/DyWA">project page</a>
+            <a href="https://pku-epic.github.io/DyWA">project page</a> /
+            <a href="https://github.com/jiangranlv/DyWA/">code</a>
             <p style="margin-bottom: 10px; margin-top: 10px">
               This work propose Dynamics-Adaptive World Action Model (DyWA) , a novel framework that enhances action learning by jointly predicting future states while adapting to dynamics variations based on historical trajectories.
             </p>
