--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <p>
               I am a Ph.D. student at <a href="https://cs.pku.edu.cn/">School of Computer Science</a>, <a
               href="https://www.pku.edu.cn/">Peking University</a>, where I am honored to be advised by <a href="https://cfcs.pku.edu.cn/people/faculty/yizhouwang/index.htm">Prof. Yizhou Wang</a>
-        and co-advised by <a href="https://hughw19.github.io/">Prof. He Wang</a>.
+        and co-advised by <a href="https://hughw19.github.io/">Prof. He Wang</a>. I also collabrate closely with <a href="https://ericyi.github.io/">Prof. Li Yi</a> and <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Prof. Tao Du</a>.
             </p>
             <p>
-              My research interests span Robotics, 3D Vision and Machine Learning. 
-              My research objective is to endow embodied agents working in complex real-world scenes with generalizable manipulation, navigation and control capabilities.
+              My research interests lie in Robotics and Embodied AI, focusing on dexterous manipulation and world modeling. 
+              My research objective is to endow embodied agents working in complex real-world scenes with generalizable manipulation capabilities.
             </p>
             </p>
             <p style="text-align:center">
