--- a/index.html
+++ b/index.html
@@ -93,6 +93,38 @@
       <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto; ">
         <tbody>
       
+        <tr>
+          <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
+            <img style="width: 100%; max-width: 100%" src="images/any2track.gif" alt="">
+          </td>
+          <td style="padding: 20px; padding-bottom: 30px; width: 72%; vertical-align: middle">
+            <papertitle>Track Any Motions under Any Disturbances</papertitle>
+            <br>
+            <a href="https://zzk273.github.io/">Zhikai Zhang*</a>,
+            <a href="https://scholar.google.com/citations?user=tuoTR7YAAAAJ/">Jun Guo*</a>,
+            <a href="https://www.lamda.nju.edu.cn/chenc/">Chao Chen</a>,
+            <a href="https://42jaylonw.github.io/">Jilong Wang</a>, 
+            <a href="https://scholar.google.com/citations?user=tM-mEZcAAAAJ&hl=zh-CN">Chenghuai Lin</a>, 
+            Yunrui Lian, 
+            <a href="https://axian12138.github.io/">Han Xue</a>, 
+            <a href="https://scholar.google.com/citations?user=x0_BPvAAAAAJ&hl=zh-CN">Zhenrong Wang</a>, 
+            Maoqi Liu, 
+            <b>Jiangran Lyu</b>,
+            <a href="https://sites.google.com/site/thuliuhuaping/home">Huaping Liu</a>, 
+            <a href="https://hughw19.github.io/">He Wang</a>, 
+            <a href="https://ericyi.github.io/">Li Yi</a>
+            <br>
+            <em>arXiv</em>, 2025
+            <br>
+            <a href="https://zzk273.github.io/Any2Track/">project page</a> /
+            <a href="https://arxiv.org/abs/2509.13833">arXiv</a> /
+            <a href="https://github.com/GalaxyGeneralRobotics/OpenTrack">code (OpenTrack)</a>
+            <img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/GalaxyGeneralRobotics/OpenTrack?style=social">
+            <p style="margin-bottom: 10px; margin-top: 10px">
+              We present Any2Track, a foundational humanoid motion tracker to track any motions under any disturbances. 
+            </p>
+          </td>
+        </tr>
 
         <tr>
           <td style="padding: 20px; padding-bottom: 30px; width: 28%; vertical-align: middle">
