--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         and co-advised by <a href="https://hughw19.github.io/">Prof. He Wang</a>. I also collabrate closely with <a href="https://ericyi.github.io/">Prof. Li Yi</a> and <a href="https://people.iiis.tsinghua.edu.cn/~taodu/">Prof. Tao Du</a>.
             </p>
             <p>
-              My research interests lie in Robotics and Embodied AI, focusing on dexterous manipulation and world modeling. 
-              My research objective is to endow embodied agents working in complex real-world scenes with generalizable manipulation capabilities.
+              My research interests lie in Robotics and Embodied AI, focusing on contact-rich manipulation and world modeling. 
+              My research objective is to endow embodied agents working in complex real-world scenes with generalizability, adaptability and dexterity.
             </p>
             </p>
             <p style="text-align:center">
