--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>
             <p>
               My research interests lie in Robotics and Embodied AI, focusing on contact-rich manipulation and world modeling. 
-              My research objective is to endow embodied agents working in complex real-world environments with generalizability, adaptability and dexterity.
+              My research objective is to endow embodied agents working in complex real-world environments with <b>Generalizability, Adaptability and Dexterity</b>.
             </p>
             </p>
             <p style="text-align:center">
