--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </p>
             <p style="text-align:center">
               <a href="mailto:jiangran.lyu@stu.pku.edu.cn">Email</a> &nbsp/&nbsp
-              <a href="https://github.com/jiangranlv">Github</a>
+              <a href="https://github.com/jiangranlv">Github</a> &nbsp/&nbsp
+              <a href="https://scholar.google.com/citations?user=pe0zGGgBGBEC&hl=zh-CN&oi=ao">Google Scholar</a>
             </p>
           </td>
           <!-- <td style="padding:2.5%;width:30%;max-width:30%">
